--- a/du_tuition_calculator.info.yml
+++ b/du_tuition_calculator.info.yml
@@ -2,6 +2,7 @@ name: DU Tuition Calculator
 description: Creates tuition calculator functionality.
 package: DU
 type: module
+version: 10.18.0
 core_version_requirement: ^8 || ^9 || ^10
 configure: du_tuition_calculator.settings
 dependencies:
