--- a/du_tuition_calculator.info.yml
+++ b/du_tuition_calculator.info.yml
@@ -7,3 +7,6 @@ core_version_requirement: ^8 || ^9 || ^10
 configure: du_tuition_calculator.settings
 dependencies:
   - drupal:chosen
+  - drupal:node
+  - drupal:paragraphs
+  - drupal:entity_reference_revisions
