removing paragraph update hook and adding admin theme permissions to queue runner

--- a/config/install/user.role.du_tuition_queue_runner.yml
+++ b/config/install/user.role.du_tuition_queue_runner.yml
@@ -12,3 +12,4 @@ permissions:
   - 'administer DU tuition calculator'
   - 'administer DU tuition calculator content'
   - 'access toolbar'
+  - 'view the administration theme'
